namespace AirTrafficMonitoring
{
    public class Conflict
    {
        
    }
}